# NETCONF-manager

./: .gitignore  LICENSE  README.md  docker-compose.yml  fasz.yang  package-lock.json  pyproject.toml  yang-library.json  yang.xml
netconf-manager-ui/: index.html  package-lock.json  package.json
netconf-manager-ui/src/: App.tsx
src/netconf_manager/: download_schemas.py  main.py
