[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project]
name = "netconf_manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Peter Vegvari" }
]
dependencies = [
    "netconf-console2",
    "netconf-client",
    "basedpyright",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/Peter-Vegvari/NETCONF-manager"

[tool.uv]
package = true

[tool.uv.sources]
manager = { workspace = true }

[tool.basedpyright]
include = ["src"]
defineConstant = { DEBUG = true }
reportImportCycles = false
failOnWarnings = false
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.pytest.ini_options]
minversion = "8.4.1"
addopts = "-ra -q"
testpaths = ["tests"]
